--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
+    "react-qrcode-logo": "^3.0.0",
     "react-router-dom": "^6.22.3",
     "swiper": "^11.2.1"
   },
