--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18.2.0",
     "react-qrcode-logo": "^3.0.0",
     "react-router-dom": "^6.22.3",
-    "swiper": "^11.2.1"
+    "swiper": "^11.2.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
