--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.3.1",
+    "axios": "^1.8.4",
     "framer-motion": "^11.1.1",
     "lucide-react": "^0.471.0",
     "react": "^18.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.54.2",
     "react-qrcode-logo": "^3.0.0",
     "react-router-dom": "^6.22.3",
     "swiper": "^11.2.1"
@@ -31,6 +33,6 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
-    "vite": "^5.2.0"
+    "vite": "^6.2.3"
   }
 }
