--- a/package.json
+++ b/package.json
@@ -10,17 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@vercel/analytics": "^1.3.1",
     "axios": "^1.8.4",
     "framer-motion": "^11.1.1",
+    "gsap": "^3.12.7",
     "lucide-react": "^0.471.0",
     "react": "^18.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
     "react-qrcode-logo": "^3.0.0",
     "react-router-dom": "^6.22.3",
-    "swiper": "^11.2.1"
+    "styled-components": "^6.1.17",
+    "swiper": "^11.2.1",
+    "three": "^0.175.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
