--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@vercel/analytics": "^1.3.1",
     "axios": "^1.8.4",
+    "docx": "^9.5.1",
     "framer-motion": "^11.1.1",
     "lucide-react": "^0.471.0",
     "prop-types": "^15.8.1",
