--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vercel/analytics": "^1.3.1",
     "axios": "^1.8.4",
     "docx": "^9.5.1",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.1.1",
     "lucide-react": "^0.471.0",
     "prop-types": "^15.8.1",
