--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "dependencies": {
     "@vercel/analytics": "^1.3.1",
     "axios": "^1.8.4",
-    "docx": "^9.5.1",
-    "file-saver": "^2.0.5",
+    "blob-stream": "^0.1.3",
     "framer-motion": "^11.1.1",
     "lucide-react": "^0.471.0",
+    "pdfkit": "^0.17.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-countup": "^6.5.3",
@@ -36,6 +36,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
-    "vite": "^6.2.3"
+    "vite": "^6.2.3",
+    "vite-plugin-node-polyfills": "^0.24.0"
   }
 }
